force-app/main/default/objects/CryptoCurrency__c/CryptoCurrency__c.object-meta.xml
<CustomObject>
    <label>CryptoCurrency</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CryptoCurrencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>