force-app/main/default/objects/CryptoCurrency__c/fields/Market_Cap__c.field-meta.xml
<CustomField>
    <fullName>Market_Cap__c</fullName>
    <label>Market Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>