force-app/main/default/objects/CryptoCurrency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>Symbol__c</columns>
    <columns>Price__c</columns>
    <columns>Market_Cap__c</columns>
    <columns>Volume__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>